# train_pgdp_ocr

./: .flake8  .gitignore  NICEGUI_README.md  README.md  TODO.md  collect_env.py  data-labeler.ipynb  dev-env-setup.sh  install-training-dependencies.sh  model-trainer.ipynb  modify-detection-boxes.ipynb  pyproject.toml  requirements.txt  run_nicegui_labeler.py  voila.json
data_labeler/: ipynb_labeler.py  ipynb_line_editor.py  ipynb_page_editor.py  nicegui_labeler.py  nicegui_line_editor.py  nicegui_page_editor.py
matched-ocr/: projectID629292e7559a8_0.json  projectID629292e7559a8_18.json  projectID629292e7559a8_20.json  projectID629292e7559a8_21.json  projectID629292e7559a8_22.json  projectID629292e7559a8_23.json  projectID629292e7559a8_25.json  projectID629292e7559a8_27.json  projectID629292e7559a8_28.json  projectID629292e7559a8_29.json  projectID629292e7559a8_3.json  projectID629292e7559a8_30.json  projectID629292e7559a8_31.json  projectID629292e7559a8_34.json  projectID629292e7559a8_35.json  projectID629292e7559a8_36.json  projectID629292e7559a8_37.json  projectID629292e7559a8_38.json  projectID629292e7559a8_39.json  projectID629292e7559a8_4.json  projectID629292e7559a8_40.json  projectID629292e7559a8_41.json  projectID629292e7559a8_42.json  projectID629292e7559a8_43.json  projectID629292e7559a8_44.json  projectID629292e7559a8_45.json  projectID629292e7559a8_46.json  projectID629292e7559a8_47.json  projectID629292e7559a8_48.json  projectID629292e7559a8_49.json  projectID629292e7559a8_51.json  projectID629292e7559a8_52.json  projectID629292e7559a8_55.json  (+119 more)
(+18 files in other folders)
