[project]
name = "train-pgdp-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hatchling>=1.27.0",
    "ipykernel",
    "ipywidgets",
    "jupyter>=1.1.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.10.1",
    "nicegui>=2.20.0",
    "pd-book-tools[tesseract,torch]",
    "pre-commit>=4.2.0",
    "pytest>=8.3",
    "python-doctr>=0.11.1a0",
    "ruff>=0.11.12",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "voila>=0.4.0",
]

[tool.uv.sources]
pd-book-tools = { path = "../pd-book-tools", editable = true }

[tool.uv]
config-settings = { editable_mode = "compat" }
